FAQQuestion mobile font size fix

--- a/src/components/RenderRouter/FAQItem.scss
+++ b/src/components/RenderRouter/FAQItem.scss
@@ -226,12 +226,12 @@
 
 @media (min-width: 768px) and (max-width: 1024px) and (orientation: landscape) {
 
-   
-    .FAQQuestion{
-        font-size: 1.2vw;
-        font-family: Graphik Web;
-        font-weight:bold;
-    }
+
+    // .FAQQuestion{
+    //     font-size: 1.2vw;
+    //     font-family: Graphik Web;
+    //     font-weight:bold;
+    // }
     .FAQAnswer{
         font-size: 1.2vw;
         font-family: Graphik Web;
@@ -466,7 +466,8 @@
         font-family: Graphik Web;
     }
     .FAQQuestion{
-        font-size: 6vw;
+        font-size: 5vw;
+        line-height: 7.5vw;
         font-family: Graphik Web;
         font-weight:bold;
     }
